--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         
         <div class="guest-text-highlight">
             <span>Honored Guest</span>
-            <strong>Amna Muneer</strong>
+            <strong>Benish Aslam</strong>
         </div>
         
         <div class="card">
